--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="list">
                 <li><a href="" >Home</a></li>
-                <li><a href="" >About Us</a></li>
+                <li><a href="#about" >About Us</a></li>
                 <li><a href="" >Teens</a></li>
                 <li><a href="" >Adults</a></li>
                 <li><a href="" >Pricing</a></li>
@@ -54,6 +54,10 @@
             </div>
         </div>
             
+        </div>
+        <div class="about" id="about">
+            <div class="about-heading">About Us</div>
+
         </div>
     </body>
     <script src="./script.js"></script>
