--- a/index.html
+++ b/index.html
@@ -56,7 +56,31 @@
             
         </div>
         <div class="about" id="about">
-            <div class="about-heading">About Us</div>
+            <div class="about-heading">ABOUT US</div>
+            <div class="aboutus">James Keller Driving School was founded to provide safe and <br>professional driving instruction
+                to new drivers in the Washington, DC area.</div>
+                <div class="video"></div>
+            <div class="cards">
+                <div class="card">
+                    <div class="img">IMG</div>
+                    <div class="aboutfeatures">
+                        <div class="aboutfeaturesheading">What we Offer</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img">IMG</div>
+                    <div class="aboutfeatures">
+                        <div class="aboutfeaturesheading">Expert Driver Preparation</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img">IMG</div>
+                    <div class="aboutfeatures">
+                        <div class="aboutfeaturesheading">Drive Safer for Parents</div>
+                    </div>
+                </div>
+
+            </div>
 
         </div>
     </body>
